# globalStudy

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  chat.py  health.py
app/chat/: __init__.py  entity_resolver.py  graph.py  llm.py  models.py  service.py  structured_query_service.py  understanding.py  vector_retrieval_service.py
app/core/: config.py  exceptions.py  logging.py
app/crawl/: __init__.py  catalog.py  cli.py  firecrawl.py  models.py  service.py
app/extract/: __init__.py  bailian.py  cli.py  fallbacks.py  loader.py  models.py  normalization.py  repository.py  service.py
app/schemas/: __init__.py  chat.py  common.py
app/vector/: chunking.py  cleaning.py  cli.py  embedding.py  models.py  repository.py  service.py
data/processed/: source_catalog.json
data/raw/imperial/msc-artificial-intelligence/: entry_requirements.md  entry_requirements.meta.json  overview.md  overview.meta.json
doc/: FYP 技术方案.md  FYP 设计.md
doc/tasks/: FYP 子任务1-项目骨架与基础设施方案.md  FYP 子任务2-数据源清单与采集方案.md  FYP 子任务3-结构化抽取与SQLite建模方案.md  FYP 子任务4-向量知识库构建方案.md  FYP 子任务5-LangGraph问答服务方案.md  FYP 子任务6-前端对话与溯源展示方案.md  FYP 子任务7-集成测试与演示交付方案.md  FYP 子任务拆分总览.md
frontend/: app.js  index.html  styles.css
scripts/: build_vector_store.py  crawl_sources.py  extract_projects.py
tests/: conftest.py  test_app.py  test_chat_generation.py  test_chat_pipeline.py  test_config.py  test_crawl_pipeline.py  test_extract_pipeline.py  test_vector_pipeline.py
