[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "globalstudy-ai"
version = "0.1.0"
description = "Local FastAPI skeleton for the GlobalStudy AI graduation project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=1.0.15",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "pydantic-settings>=2.10.1",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-p no:capture"
pythonpath = ["."]
testpaths = ["tests"]
